--- a/finebe.app/src/index.css
+++ b/finebe.app/src/index.css
@@ -1,6 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400..800&display=swap");
 
+:host,
+.sl-theme-dark {
+  /* your custom styles here */
+  font-family: "Source Sans Pro", sans-serif;
+}
+
 html,
 body,
 #root,
@@ -11,3 +17,6 @@ body,
   font-family: "Source Sans Pro", sans-serif;
 }
 
+body {
+  margin: 0;
+}
